--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -1,4 +1,5 @@
 #root {
+	display: block;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0,0,0,1);
@@ -6,6 +7,7 @@
 }
 
 grid-window {
+	display: block;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(100,100,100,1);
