--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -1,14 +1,26 @@
+body {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  padding: 0px;
+  margin: 0px;
+}
+
 #root {
-	display: block;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0,0,0,1);
-	padding: 50px;
+display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(220,220,220,1);
+  padding: 20px;
+  position: absolute;
+  box-sizing: border-box;
 }
 
 grid-window {
-	display: block;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(100,100,100,1);
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(150,150,150,1);
+  border-radius: 5px;
 }
