--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -24,3 +24,15 @@ grid-window {
   background-color: rgba(150,150,150,1);
   border-radius: 5px;
 }
+
+beat-bar {
+  height: 100%;
+}
+
+beat-col {
+  height: 100%;
+  width: 50px;
+  display: inline-block;
+  border-left: 1px solid rgba(50,50,50,1);
+  border-right: 1px solid rgba(50,50,50,1);
+}
