--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -26,13 +26,14 @@ grid-window {
 }
 
 beat-bar {
+  font-size: 0;
   height: 100%;
 }
 
 beat-col {
   height: 100%;
-  width: 50px;
+  width: 20px;
   display: inline-block;
-  border-left: 1px solid rgba(50,50,50,1);
-  border-right: 1px solid rgba(50,50,50,1);
+  border-left: 1px solid rgba(90,90,90,0.5);
+  border-right: 1px solid rgba(90,90,90,0.5);
 }
