--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -37,3 +37,6 @@ beat-col {
   border-left: 1px solid rgba(90,90,90,0.5);
   border-right: 1px solid rgba(90,90,90,0.5);
 }
+
+.col_a { background-color: rgba(0,0,0,0); }
+.col_b { background-color: rgba(0,0,0,0.1); }
