--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -26,6 +26,7 @@ grid-window {
 }
 
 beat-bar {
+  position: absolute;
   font-size: 0;
   height: 100%;
 }
@@ -40,3 +41,18 @@ beat-col {
 
 .col_a { background-color: rgba(0,0,0,0); }
 .col_b { background-color: rgba(0,0,0,0.1); }
+
+track-window {
+  position: absolute;
+  font-size: 0;
+  height: 100%;
+  width: 100%;
+}
+
+track-row {
+  display: block;
+  width: 100%;
+  height: 100px;
+  border-top: 1px solid rgba(90,90,90,0.8);
+  border-bottom: 1px solid rgba(90,90,90,0.8);
+}
