--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -45,6 +45,10 @@ beat-col {
   display: inline-block;
   border-left: 1px solid rgba(90,90,90,0.5);
   border-right: 1px solid rgba(90,90,90,0.5);
+  
+  font-size: 10px;
+  font-family: system-ui;
+  color: rgba(0,0,0,0.1);
 }
 
 .col_a { background-color: rgba(0,0,0,0); }
