--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -55,9 +55,16 @@ beat-col > span{
   font-weight: bold;
   color: rgba(0,0,0,0.5);
   position: absolute;
+  margin-left: -2px;
+
+  border-left: 2px solid rgba(90,90,90,0.5);
+  border-image: linear-gradient(to bottom, #000 50%, transparent 50%) 100% 1;
 }
 
-.fullbar > span { border-left: 2px solid rgba(90,90,90,0.5); }
+.fullbar > span { 
+	border-left: 2px solid rgba(90,90,90,0.5);
+	border-image: none;
+ }
 .col_a { background-color: rgba(0,0,0,0); }
 .col_b { background-color: rgba(0,0,0,0.1); }
 
