--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -57,13 +57,12 @@ beat-col > span{
   position: absolute;
   margin-left: -2px;
 
-  border-left: 2px solid rgba(90,90,90,0.5);
-  border-image: linear-gradient(to bottom, #000 50%, transparent 50%) 100% 1;
+  background: linear-gradient(to bottom, #111 100%) left no-repeat;
+  background-size: 2px 100%;
 }
 
 .fullbar > span { 
-	border-left: 2px solid rgba(90,90,90,0.5);
-	border-image: none;
+  background: linear-gradient(to bottom, #fb000000 50%, #111 50%) left no-repeat;
  }
 .col_a { background-color: rgba(0,0,0,0); }
 .col_b { background-color: rgba(0,0,0,0.1); }
