--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -57,12 +57,13 @@ beat-col > span{
   position: absolute;
   margin-left: -2px;
 
-  background: linear-gradient(to bottom, #111 100%) left no-repeat;
+  background: linear-gradient(to top, #0006 50%, #fb111111 50%) left no-repeat;
   background-size: 2px 100%;
 }
 
 .fullbar > span { 
-  background: linear-gradient(to bottom, #fb000000 50%, #111 50%) left no-repeat;
+  background: linear-gradient(to top, #fb111111 50%) left no-repeat;
+  background-size: 2px 100%;
  }
 .col_a { background-color: rgba(0,0,0,0); }
 .col_b { background-color: rgba(0,0,0,0.1); }
