--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -33,11 +33,18 @@ beat-bar-header {
   width: calc(100% - 40px);
 }
 
-beat-bar {
+beat-bar-container {
   margin-top: 20px;
   position: absolute;
   font-size: 0;
   height: calc(100% - 40px - 20px);
+}
+
+beat-bar {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  overflow-x: scroll;
 }
 
 beat-col {
@@ -46,17 +53,20 @@ beat-col {
   display: inline-block;
   border-left: 1px solid rgba(90,90,90,0.5);
   border-right: 1px solid rgba(90,90,90,0.5);
+  flex-shrink: 0;
+  flex-grow: 0;
+  flex-basis: 20px;
 }
 
 beat-col > span{
   margin-top: -12px;
-  font-size: 10px;
+  font-size: 8px;
   font-family: system-ui;
   font-weight: bold;
   color: rgba(0,0,0,0.5);
   position: absolute;
   margin-left: -2px;
-  padding-left: 2px;
+  padding-left: 4px;
 
   background: linear-gradient(to top, #0003 50%, #11111100 50%) left no-repeat;
   background-size: 2px 100%;
