--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -31,6 +31,7 @@ beat-bar-header {
   font-size: 0;
   height: 20px;
   width: calc(100% - 40px);
+  margin-top: -20px;
 }
 
 beat-bar-container {
@@ -99,4 +100,11 @@ track-row {
   height: 20px;
   border-top: 1px solid rgba(90,90,90,0.8);
   border-bottom: 1px solid rgba(90,90,90,0.8);
+}
+
+track-row-empty {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,1);
 }
