--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -90,7 +90,7 @@ track-window {
   position: absolute;
   font-size: 0;
   height: 100%;
-  width: calc(100% - 40px);
+  width: calc(100% - 80px);
   z-index: 10;
 }
 
@@ -106,5 +106,7 @@ track-row-empty {
   display: block;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,1);
+  background-color: rgba(160,160,160,1);
+  align-items: center;
+  text-align: center;
 }
