--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -89,7 +89,7 @@ track-window {
   margin-top: 30px;
   position: absolute;
   font-size: 0;
-  height: 100%;
+  height: calc(100% - 80px);
   width: calc(100% - 40px);
   z-index: 10;
 }
@@ -103,10 +103,17 @@ track-row {
 }
 
 track-row-empty {
-  display: block;
+  display: flex;
   width: 100%;
   height: 100%;
   background-color: rgba(160,160,160,1);
   align-items: center;
-  text-align: center;
+  justify-content: center;
+}
+
+track-row-empty > span {
+  font-size: 10px;
+  height: 40px;
+  padding: 20px;
+  border: 3px dashed rgba(0,0,0,0.2);
 }
