--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -9,7 +9,9 @@ body {
 }
 
 #root {
-display: block;
+  --main-width: 75%;
+
+  display: block;
   width: 100%;
   height: 100%;
   background-color: rgba(220,220,220,1);
@@ -20,7 +22,7 @@ display: block;
 
 grid-window {
   display: block;
-  width: 100%;
+  width: var(--main-width);
   height: 100%;
   background-color: rgba(150,150,150,1);
   border-radius: 5px;
@@ -30,7 +32,7 @@ beat-bar-header {
   position: absolute;
   font-size: 0;
   height: 20px;
-  width: calc(100% - 40px);
+  width: calc(var(--main-width) - 40px);
   margin-top: -20px;
 }
 
@@ -38,8 +40,8 @@ beat-bar-container {
   margin-top: 20px;
   position: absolute;
   font-size: 0;
-  height: calc(100% - 40px - 20px);
-  width: calc(100% - 40px);
+  height: calc(100% - 40px - 30px);
+  width: calc(var(--main-width) - 40px);
   /** z-index: 100; **/
 }
 
@@ -91,7 +93,7 @@ track-window {
   position: absolute;
   font-size: 0;
   height: calc(100% - 80px);
-  width: calc(100% - 40px);
+  width: calc(var(--main-width) - 40px);
   overflow-y: scroll;
   /** z-index: 10; **/
 }
@@ -109,6 +111,7 @@ track-row-empty {
   display: flex;
   width: 100%;
   height: 100%;
+  min-height: 100px;
   background-color: rgba(160,160,160,1);
   align-items: center;
   justify-content: center;
