--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -20,8 +20,17 @@ body {
   box-sizing: border-box;
 }
 
+side-window {
+  display: inline-block;
+  width: calc(100% - var(--main-width));
+  height: 100%;
+  background-color: rgba(150,150,150,1);
+  border-radius: 5px;
+  background-color: black;
+}
+
 grid-window {
-  display: block;
+  display: inline-block;
   width: var(--main-width);
   height: 100%;
   background-color: rgba(150,150,150,1);
