--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -22,11 +22,12 @@ body {
 
 side-window {
   display: inline-block;
-  width: calc(100% - var(--main-width));
+  width: calc(100% - var(--main-width) - 10px);
   height: 100%;
-  background-color: rgba(150,150,150,1);
-  border-radius: 5px;
-  background-color: black;
+  background-color: rgba(120,120,120,1);
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  margin-left: -10px;
 }
 
 grid-window {
