--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -148,12 +148,16 @@ track-row-empty > span {
   border: 3px dashed rgba(0,0,0,0.2);
 }
 
+track-title-container {
+  padding-top: 20px;
+}
+
 track-title {
   display: block;
   width: 100%;
   height: 20px;
-  border-top: 1px solid rgba(90,90,90,0.0);
-  border-bottom: 1px solid rgba(90,90,90,0.0);
+  border-top: 1px solid rgba(90,90,90,0.8);
+  border-bottom: 1px solid rgba(90,90,90,0.8);
   box-sizing: border-box;
   background-color: rgba(200,100,100,1);
 }
