--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -149,7 +149,12 @@ track-row-empty > span {
 }
 
 track-title-container {
-  padding-top: 20px;
+  padding-top: 30px;
+  padding-bottom: 10px;
+  box-sizing: border-box;
+  height: 100%;
+  display: block;
+  overflow-y: scroll;
 }
 
 track-title {
