--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -122,6 +122,13 @@ track-window {
   /** z-index: 10; **/
 }
 
+track-row-container {
+  display: block;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
 track-row {
   display: block;
   width: 100%;
