--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -125,13 +125,13 @@ track-window {
   /** z-index: 10; **/
 }
 
-track-row-container {
+track-line-container {
   display: block;
   height: 100%;
   box-sizing: border-box;
 }
 
-track-row {
+track-line {
   display: block;
   width: 100%;
   height: 20px;
@@ -140,7 +140,7 @@ track-row {
   box-sizing: border-box;
 }
 
-track-row-empty {
+track-line-empty {
   display: flex;
   width: 100%;
   height: 100%;
@@ -150,7 +150,7 @@ track-row-empty {
   justify-content: center;
 }
 
-track-row-empty > span {
+track-line-empty > span {
   font-size: 10px;
   height: 40px;
   padding: 20px;
