--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -138,6 +138,7 @@ track-row {
   border-top: 1px solid rgba(90,90,90,0.8);
   border-bottom: 1px solid rgba(90,90,90,0.8);
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 track-row-empty {
@@ -183,6 +184,7 @@ track-pattern {
   border: 1px solid rgba(90,90,90,0.8);
   box-sizing: border-box;
   background-color: rgba(200,200,200,1);
+  cursor: move;
 }
 
 .unselectable {
