--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -178,9 +178,10 @@ track-title {
 }
 
 track-pattern {
+  position: absolute;
   display: inline-block;
   width: 20px;
-  height: 100%;
+  height: calc(20px - 2px);
   border: 1px solid rgba(90,90,90,0.8);
   box-sizing: border-box;
   background-color: rgba(200,200,200,1);
