--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -168,6 +168,7 @@ track-title-container {
   height: 100%;
   display: block;
   overflow-y: scroll;
+  overscroll-behavior-y: none;
 }
 
 track-title {
