--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -186,11 +186,13 @@ track-title {
   border-bottom: 1px solid rgba(90,90,90,0.8);
   box-sizing: border-box;
   background-color: rgba(200,100,100,1);
+  cursor: pointer;
 }
 
 track-title > input {
   background-color: transparent;
   border: none;
+  border-bottom: 1px solid rgba(10,10,10,0.5);
   font-size: 12px;
   height: 12px;
   margin-left: 5px;
