--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -27,7 +27,7 @@ side-window {
   background-color: rgba(120,120,120,1);
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
-  margin-left: -10px;
+  margin-left: -8px;
 }
 
 grid-window {
@@ -142,6 +142,10 @@ track-row {
   border-bottom: 1px solid rgba(90,90,90,0.8);
   box-sizing: border-box;
   cursor: pointer;
+}
+
+track-row.selected {
+   border: 1px solid white;
 }
 
 track-row-empty {
