--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -202,7 +202,7 @@ track-title.selected {
 }
 
 track-title.insertMarkT{
-  border-bottom: 3px solid rgba(250,250,250,0.8);
+  border-top: 3px solid rgba(250,250,250,0.8);
 }
 
 track-title.insertMarkB{
