--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -265,9 +265,9 @@ track-pattern-br {
 .context-menu {
     display: none;
     position: absolute;
-    background-color: #fff;
+    background-color: black;
     border: 1px solid #ccc;
-    padding: 5px 0;
+    padding: 4px;
     z-index: 1000;
 }
 .context-menu-item {
@@ -280,13 +280,13 @@ track-pattern-br {
 
 .color-palette {
     display: grid;
-    grid-template-columns: repeat(8, 6px); /* Adjust as needed */
+    grid-template-columns: repeat(10, 10px); /* Adjust as needed */
     gap: 2px; /* Adjust the gap between color items */
 }
 
 .color-item {
-    width: 6px; /* Adjust the width of each color item */
-    height: 6px; /* Adjust the height of each color item */
+    width: 10px; /* Adjust the width of each color item */
+    height: 10px; /* Adjust the height of each color item */
     border: 1px solid #ccc; /* Add border for clarity */
     cursor: pointer; /* Change cursor to pointer on hover */
 }
