--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -151,17 +151,15 @@ track-row.selected {
 track-row-empty {
   display: flex;
   width: 100%;
-  height: 100%;
-  min-height: 100px;
+  height: 40px;
   background-color: rgba(160,160,160,1);
   align-items: center;
-  justify-content: center;
 }
 
 track-row-empty > span {
   font-size: 10px;
-  height: 20px;
-  padding: 20px;
+  height: 10px;
+  padding: 10px;
   border: 2px dashed rgba(0,0,0,0.2);
 }
 
@@ -174,7 +172,7 @@ track-title-container {
   scrollbar-width: none;  /* Firefox */
 
   padding-top: 30px;
-  padding-bottom: 10px;
+  padding-bottom: calc(10px + 40px);
   box-sizing: border-box;
   height: 100%;
   display: block;
