--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -119,7 +119,7 @@ track-window {
   margin-top: 30px;
   position: absolute;
   font-size: 0;
-  height: calc(100% - 80px);
+  height: calc(100% - 80px - 40px);
   width: calc(var(--main-width) - 40px);
   overflow-y: scroll;
   overflow-x: scroll;
@@ -157,7 +157,7 @@ track-row-empty {
   align-items: center;
   justify-content: center;
   position: fixed;
-  margin-top: -40px;
+  margin-top: 0px;
   cursor: pointer;
 }
 
