--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -183,20 +183,32 @@ track-title-container {
   display: block;
   overflow-y: scroll;
   overscroll-behavior-y: none;
+  position: relative;
+  z-index: 5;
 }
 
 track-title-header {
   box-sizing: border-box;
-  height: 40px;
+  height: 30px;
   display: block;
-  position: fixed;
+  position: relative;
+  width: 100%;
+  z-index: 10;
+  background-color: rgba(90,90,90,0.9);
+  margin-bottom: -30px;
+  border-radius: 5px;
 }
 
 track-title-footer {
   box-sizing: border-box;
-  height: 40px;
+  height: 50px;
   display: block;
-  position: fixed;
+  position: relative;
+  width: 100%;
+  margin-top: -50px;
+  z-index: 10;
+  background-color: rgba(90,90,90,0.9);
+  border-radius: 5px;
 }
 
 track-title {
