--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -196,7 +196,7 @@ track-title-header {
   z-index: 10;
   background-color: rgba(90,90,90,0.9);
   margin-bottom: -30px;
-  border-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 track-title-footer {
@@ -208,7 +208,7 @@ track-title-footer {
   margin-top: -50px;
   z-index: 10;
   background-color: rgba(90,90,90,0.9);
-  border-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 track-title {
