--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -14,6 +14,8 @@ body {
 
 #root {
   --main-width: 80%;
+  --beat-width: 20px;
+
 
   display: block;
   width: 100%;
@@ -79,13 +81,13 @@ beat-bar {
 
 beat-col {
   height: 100%;
-  width: 20px;
+  width: var(--beat-width);
   display: inline-block;
   border-left: 1px solid rgba(90,90,90,0.5);
   border-right: 1px solid rgba(90,90,90,0.5);
   flex-shrink: 0;
   flex-grow: 0;
-  flex-basis: 20px;
+  flex-basis: var(--beat-width);
   position: relative;
   box-sizing: border-box;
 }
