--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -346,5 +346,8 @@ track-pattern-br {
 	border-radius: 50%;
     position: absolute;
     right: 0px;
+    width: 20px;
+    height: 20px;
+    font-size: 10px;
 } 
 
