--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -356,3 +356,18 @@ track-pattern-br {
     cursor: pointer;
 } 
 
+#zoom_out_grid{
+	border: 1px solid white;
+	border-radius: 50%;
+    position: absolute;
+    right: 20px;
+    width: 15px;
+    height: 15px;
+    font-size: 15px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+} 
+
