--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -26,6 +26,14 @@ body {
   box-sizing: border-box;
 }
 
+top-window {
+  display: block;
+  width: 100%;
+  height: 20px;
+  background-color: rgba(120,120,120,1);
+  border-radius: 5px;
+}
+
 side-window {
   display: inline-block;
   width: calc(100% - var(--main-width) - 10px);
