--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -66,7 +66,7 @@ beat-bar-container {
   margin-top: 20px;
   position: absolute;
   font-size: 0;
-  height: calc(100% - 40px - 30px);
+  height: calc(100% - 40px - 30px - 20px);
   width: calc(var(--main-width) - 40px);
   /** z-index: 100; **/
 }
@@ -135,7 +135,7 @@ track-window {
   margin-top: 30px;
   position: absolute;
   font-size: 0;
-  height: calc(100% - 80px - 40px);
+  height: calc(100% - 80px - 40px - 14px);
   width: calc(var(--main-width) - 40px);
   overflow-y: scroll;
   overflow-x: scroll;
@@ -221,7 +221,7 @@ track-title-footer {
   display: block;
   position: relative;
   width: 100%;
-  margin-top: calc(-50px + 24px);
+  margin-top: calc(-50px + 10px);
   z-index: 10;
   background-color: rgba(90,90,90,0.9);
   border-bottom-right-radius: 5px;
