--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -389,7 +389,8 @@ time-marker {
 	position: absolute;
 	width: 1px;
 	height: 100%;
-	border: 1px solid red;
+	background-color: red;
+	border: 1px solid rgba(200,0,0,0.3);
 	margin-left: 0px;
 }
 
