--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -389,8 +389,7 @@ time-marker {
 	position: absolute;
 	width: 1px;
 	height: 100%;
-	background-color: red;
-	border: 1px solid rgba(200,0,0,0.3);
+	border-left: 1px solid rgb(200,0,0);
 	margin-left: 0px;
 }
 
