--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -144,11 +144,20 @@ track-window {
   /** z-index: 10; **/
 }
 
+time-marker {
+	position: absolute;
+	width: 1px;
+	height: 100%;
+	border-left: 1px solid rgb(200,0,0);
+	margin-left: 0px;
+}
+
 track-row-container {
   display: block;
   height: 100%;
   box-sizing: border-box;
   padding-bottom: calc(10px + 40px);
+  position: absolute;
 }
 
 track-row {
@@ -173,7 +182,7 @@ track-row-empty {
   align-items: center;
   justify-content: center;
   position: fixed;
-  margin-top: 0px;
+  bottom: 20px;
   cursor: pointer;
 }
 
@@ -384,12 +393,4 @@ track-pattern-br {
     align-items: center;
     cursor: pointer;
 } 
-
-time-marker {
-	position: absolute;
-	width: 1px;
-	height: 100%;
-	border-left: 1px solid rgb(200,0,0);
-	margin-left: 0px;
-}
 
