--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -26,6 +26,13 @@ body {
   box-sizing: border-box;
 }
 
+sound-browser {
+  display: block;
+  height: 100%;
+  background-color: rgba(120,120,120,1);
+  border-radius: 5px;
+}
+
 top-window {
   display: block;
   width: 100%;
@@ -33,7 +40,6 @@ top-window {
   background-color: rgba(120,120,120,1);
   border-radius: 5px;
   margin-bottom: 4px;
-
 }
 
 side-window {
