--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -73,7 +73,7 @@ beat-bar-container {
   position: absolute;
   font-size: 0;
   height: calc(100% - 40px - 30px - 20px);
-  width: calc(var(--main-width) - 40px);
+  width: calc(var(--main-width) * 70 / 100 - 32px);
   /** z-index: 100; **/
 }
 
@@ -142,7 +142,7 @@ track-window {
   position: absolute;
   font-size: 0;
   height: calc(100% - 80px - 40px - 14px);
-  width: calc(var(--main-width) - 40px);
+  width: calc(var(--main-width) * 70 / 100 - 32px);
   overflow-y: scroll;
   overflow-x: scroll;
   overscroll-behavior-x: none;
@@ -182,7 +182,7 @@ track-row.selected {
 
 track-row-empty {
   display: flex;
-  width: calc(var(--main-width) - 40px);
+  width: calc(var(--main-width) * 70 / 100 - 32px);
   height: 40px;
   background-color: rgba(160,160,160,1);
   align-items: center;
