--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -34,6 +34,15 @@ sound-browser {
   height: 100%;
   background-color: rgba(120,120,120,1);
   border-radius: 5px;  
+  padding: 1px;
+}
+
+sound-element {
+  display: block;
+  height: 14px;
+  width: 100%;
+  background-color: rgba(200,200,200,1); 
+  margin-bottom: 1px; 
 }
 
 top-window {
