--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -44,6 +44,8 @@ sound-element {
   width: 100%;
   background-color: rgba(200,200,200,1); 
   margin-bottom: 1px; 
+  color: rgb(50,50,50);
+  font-size: 10px;
 }
 
 top-window {
