--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -37,8 +37,11 @@ sound-browser {
   padding: 1px;
   box-sizing: border-box;
   padding-top: 4px;
+  padding-bottom: 4px;
   white-space: nowrap;
   vertical-align: top;
+  overflow-x: clip;
+  overflow-y: scroll;
 }
 
 
