--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -32,7 +32,8 @@ sound-browser {
   width: 14.5%;
 
   height: 100%;
-  background-color: rgba(120,120,120,1);
+  background-color: rgba(20,20,20,1);
+  border: 1px solid rgba(120,120,120,1);
   border-radius: 5px;  
   padding: 1px;
   box-sizing: border-box;
@@ -50,12 +51,16 @@ sound-element {
   display: block;
   height: 14px;
   width: 100%;
-  background-color: rgba(200,200,200,1); 
+  /*background-color: rgba(200,200,200,1); */
   margin-bottom: 1px; 
-  color: rgb(50,50,50);
+  color: rgb(250,250,250);
   font-size: 10px;
   font-family: "Varela", sans-serif;
   cursor: pointer;
+}
+
+sound-element:hover {
+  font-weight: bold;
 }
 
 top-window {
