--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -64,12 +64,13 @@ sound-element:hover {
 }
 
 top-window {
-  display: block;
+  display: flex;
   width: 100%;
   height: 20px;
   background-color: rgba(120,120,120,1);
   border-radius: 5px;
   margin-bottom: 4px;
+  justify-content: center;
 }
 
 side-window {
@@ -430,7 +431,7 @@ track-pattern-br {
 } 
 
 #play, #stop{
-   font-size: 15px;
+   font-size: 16px;
    cursor: pointer;
    color: white;
 }
