--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -430,7 +430,11 @@ track-pattern-br {
     cursor: pointer;
 } 
 
-#play, #stop{
+#load {
+   display: none;
+}
+
+#play, #stop {
    font-size: 16px;
    cursor: pointer;
    color: white;
