--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -228,20 +228,16 @@ time-bar {
 
 time-bar > span {
   font-size: 8px;
-  position: absolute;
-  margin-top: 2px;
+  margin-left: 2px;
   color: black;
   width: 10px;
   height: 10px;
-  padding-left: 2px;
 }
 
 time-bar-sec {
-	position: absolute;
 	display: inline-block;
 	height: 100%;
-	width: 1px;
-	background-color: black;
+	border-left: 1px solid black;
 	box-sizing: border-box;
 }
 
