--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -226,19 +226,19 @@ time-bar {
 	display: inline-block;
 }
 
-time-bar > span {
-  font-size: 8px;
-  margin-left: 2px;
-  color: black;
-  width: 10px;
-  height: 10px;
-}
-
 time-bar-sec {
 	display: inline-block;
 	height: 100%;
 	border-left: 1px solid black;
 	box-sizing: border-box;
+}
+
+time-bar-sec > span {
+  font-size: 8px;
+  margin-left: 2px;
+  color: black;
+  width: 10px;
+  height: 10px;
 }
 
 time-bar-dsec {
