--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -226,6 +226,12 @@ time-bar {
 	display: inline-block;
 }
 
+time-bar > div {
+	width: max-content;
+	position: absolute;
+	height: 100%;
+}
+
 time-bar-sec {
 	display: inline-block;
 	height: 100%;
@@ -236,7 +242,7 @@ time-bar-sec {
 time-bar-sec > span {
   font-size: 8px;
   margin-left: 2px;
-  margin-top: 2px;
+  margin-top: 6px;
   color: black;
   width: 10px;
   height: 10px;
