--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -242,10 +242,9 @@ time-bar-sec {
 time-bar-sec > span {
   font-size: 8px;
   margin-left: 2px;
-  margin-top: 6px;
+  position: absolute;
   color: black;
-  width: 10px;
-  height: 10px;
+  margin-top: 3px;
 }
 
 time-bar-dsec {
