--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -91,8 +91,8 @@ top-window {
   display: flex;
   width: 100%;
   height: 20px;
-  background-color: rgba(120,120,120,1);
-  border-radius: 5px;
+  /* background-color: rgba(120,120,120,1);
+  border-radius: 5px; */
   margin-bottom: 4px;
   align-items: center;
 }
@@ -520,10 +520,25 @@ track-pattern-br {
    color: white;
 }
 
+#play_div {
+  position: absolute;
+  background-color: rgba(120,120,120,1);
+  border-radius: 5px;
+  left: auto;
+  right: auto;
+}
+
+#bpm_div {
+  background-color: rgba(120,120,120,1);
+  border-radius: 5px;
+}
+
 #bpm {
-	position: absolute;
-	right: 30px;
-	width: 30px;
+  width: 30px;
+  height: 14px;
+  background-color: rgb(200, 200, 200);
+  border: none;
+  border-radius: 5%;
 }
 
 
