--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -515,7 +515,7 @@ track-pattern-br {
    color: orange;
 }
 
-#play, #stop {
+#play, #pause, #stop {
    font-size: 20px;
    cursor: pointer;
    color: white;
