--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -44,6 +44,8 @@ sound-browser {
   vertical-align: top;
   overflow-x: clip;
   overflow-y: scroll;
+
+  position: relative;
 }
 
 
@@ -96,6 +98,7 @@ top-window {
   border-radius: 5px; */
   margin-bottom: 4px;
   align-items: center;
+  position: relative;
 }
 
 side-window {
@@ -105,6 +108,7 @@ side-window {
   background-color: rgba(120,120,120,1);
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
+  position: relative;
 }
 
 grid-window {
@@ -113,6 +117,7 @@ grid-window {
   height: calc(100% - 20px - 4px);
   background-color: rgba(150,150,150,1);
   border-top-left-radius: 5px;
+  position: relative;
 }
 
 beat-bar-header {
@@ -128,7 +133,7 @@ beat-bar-container {
   position: absolute;
   font-size: 0;
   height: calc(100% - 40px - 30px - 20px);
-  width: calc(var(--main-width) * var(--layout-width) - 32px);
+  width: 100%;
   /** z-index: 100; **/
 }
 
@@ -198,7 +203,7 @@ track-window {
   position: absolute;
   font-size: 0;
   height: calc(100% - 80px - 40px - 14px);
-  width: calc(var(--main-width) * var(--layout-width) - 32px);
+  width: 100%;
   overflow-y: scroll;
   overflow-x: scroll;
   overscroll-behavior-x: none;
@@ -215,7 +220,7 @@ time-bar-container {
   position: absolute;
   font-size: 0;
   height: 10px;
-  width: calc(var(--main-width) * var(--layout-width) - 32px);
+  width: 100%;
   overflow-x: scroll;
   overscroll-behavior-x: none;
   overscroll-behavior-y: none;    
