--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -132,7 +132,7 @@ beat-bar-container {
   margin-top: 20px;
   position: absolute;
   font-size: 0;
-  height: calc(100% - 40px - 30px - 20px);
+  height: calc(100% - 40px - 30px + 20px);
   width: 100%;
   /** z-index: 100; **/
 }
@@ -202,7 +202,7 @@ track-window {
   margin-top: 30px;
   position: absolute;
   font-size: 0;
-  height: calc(100% - 80px - 40px - 14px);
+  height: calc(100% - 30px - 40px);
   width: 100%;
   overflow-y: scroll;
   overflow-x: scroll;
