--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -296,13 +296,13 @@ track-row.selected {
 
 track-row-empty {
   display: flex;
-  width: calc(var(--main-width) * var(--layout-width) - 26px);
+  width: 100%;
   height: 40px;
   background-color: rgba(160,160,160,1);
   align-items: center;
   justify-content: center;
-  position: fixed;
-  bottom: 20px;
+  position: absolute;
+  bottom: 0px;
   cursor: pointer;
 }
 
