--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -223,7 +223,8 @@ time-bar-container {
   width: 100%;
   overflow-x: scroll;
   overscroll-behavior-x: none;
-  overscroll-behavior-y: none;    
+  overscroll-behavior-y: none; 
+  background-color: rgba(10, 10, 10, 0.5);   
 }
 
 time-bar {
@@ -297,7 +298,7 @@ track-row.selected {
 track-row-empty {
   display: flex;
   width: 100%;
-  height: 40px;
+  height: 30px;
   background-color: rgba(160,160,160,1);
   align-items: center;
   justify-content: center;
