--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -224,7 +224,7 @@ time-bar-container {
   overflow-x: scroll;
   overscroll-behavior-x: none;
   overscroll-behavior-y: none; 
-  background-color: rgba(10, 10, 10, 0.7);   
+  background-color: rgba(200, 0, 0, 0.4);   
 }
 
 time-bar {
@@ -242,7 +242,7 @@ time-bar > div {
 time-bar-sec {
 	display: inline-block;
 	height: 100%;
-	border-left: 1px solid white;
+	border-left: 1px solid black;
 	box-sizing: border-box;
 }
 
@@ -258,7 +258,7 @@ time-bar-dsec {
 	display: inline-block;
 	height: 30%;
     vertical-align: top;	
-	border-left: 1px solid rgba(200,200,200,0.2);
+	border-left: 1px solid rgba(20,20,20,0.2);
 	box-sizing: border-box;
 }
 
