--- a/sketchtune/css/theme.css
+++ b/sketchtune/css/theme.css
@@ -32,7 +32,7 @@ sound-browser {
   margin-right: 0.5%;
   width: 14.5%;
 
-  height: 70%;
+  height: calc(100% - 40px);
   background-color: rgba(60,60,60,1);
   border: 1px solid rgba(120,120,120,1);
   border-radius: 5px;  
@@ -570,6 +570,7 @@ canvas {
 #waveformCanvas {
   width: 14.5%;
   margin-right: 0.5%;
+  height: 40px;
 }
 
 #spectrumCanvas {
