--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -1,6 +1,7 @@
 html, body {
     min-height: 200px; /* Set your desired minimum height here */
     font-family: "Varela", sans-serif;
+    user-select: none;
 }
 
 body {
@@ -26,10 +27,12 @@ body {
 
 #title {
   position: absolute;
-  top: 50%;
+  top: 25%;
   left: 50%;
-  transform: translate(-50%, -75%);
+  transform: translate(-50%, -50%);
   font-family: "Sue Ellen Francisco", cursive !important;
   font-weight: 400;
   font-style: normal;
+  font-size: 200px;
 }
+
