--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -26,10 +26,11 @@ body {
 
 #title_div {
   position: absolute;
-  top: 10%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  height: 100px;
 }
 
 #title {
@@ -37,12 +38,15 @@ body {
   font-weight: 400;
   font-style: normal;
   font-size: 100px;
+  margin: 0;
+  height: 140px;
 }
 
 #subtitle {
   font-family: "Sue Ellen Francisco", cursive !important;
   font-weight: 400;
   font-style: normal;
+  margin: 0;
   font-size: 40px;
 }
 
