--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -26,7 +26,7 @@ body {
 
 #title_div {
   position: absolute;
-  top: 12%;
+  top: 100px;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
@@ -54,13 +54,23 @@ body {
 #descr_div {
   position: absolute;
   font-family: "Sue Ellen Francisco", cursive !important;
-  bottom: 6%;
+  top: 600px;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   height: 50px;
   width: 100%;
   font-size: 20px;
+}
+
+#stats_div {
+  position: absolute;
+  top: 300px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 800px;
+  height: 400px;
 }
 
 
