--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -22,11 +22,12 @@ body {
   padding: 20px;
   position: absolute;
   box-sizing: border-box;
+  position: relative;
 }
 
 #title_div {
   position: absolute;
-  top: 100px;
+  top: 50px;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
@@ -64,14 +65,21 @@ body {
 }
 
 #stats_div {
-  position: absolute;
-  top: 300px;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
+  top: 200px;
+  border-radius: 5px;
   text-align: center;
-  width: 800px;
-  height: 400px;
+  width: 100%;
+  height: 200px;
+  background-color: white;
+  box-sizing: border-box;
+  box-sizing: border-box;
+  display: block;
+  background-color: rgba(10,10,10,0.1);
 }
 
+#fft-table {
+  
+}
 
 
