--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -75,13 +75,18 @@ body {
   box-sizing: border-box;
   box-sizing: border-box;
   display: block;
-  background-color: rgba(200,200,200,0.2);
+  background-color: rgba(250,250,250,0.6);
 }
 
 #fft-table {
    width: 100%;
    font-family: "Varela", sans-serif;
    font-size: 12px;
+}
+
+#fft-table > td {
+  border-radius: 4px;
+  border: 1px solid darkgray;
 }
 
 
