--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -82,11 +82,17 @@ body {
    width: 100%;
    font-family: "Varela", sans-serif;
    font-size: 12px;
+   padding:10px;
 }
 
-#fft-table > td {
+#fft-table td {
   border-radius: 4px;
-  border: 1px solid darkgray;
+  border: 1px solid rgba(10,10,10,0.1);
+  width: 10%;
+}
+
+#tr_header {
+
 }
 
 
