--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -89,10 +89,11 @@ body {
   border-radius: 4px;
   border: 1px solid rgba(10,10,10,0.1);
   width: 10%;
+  background-color: white;
 }
 
-#tr_header {
-
+#tr_header > td {
+   background-color: transparent;
 }
 
 
