--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -76,6 +76,8 @@ body {
   box-sizing: border-box;
   display: block;
   background-color: rgba(250,250,250,0.6);
+  display: flex;
+  justify-content: center;
 }
 
 #fft-table {
@@ -97,3 +99,18 @@ body {
 }
 
 
+
+.loading-circle {
+    border: 4px solid #f3f3f3; /* Light grey */
+    border-top: 4px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite; /* Spin animation */
+    margin: 0 auto; /* Center horizontally */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
