--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -102,12 +102,12 @@ body {
 
 .loading-circle {
     border: 4px solid #f3f3f3; /* Light grey */
-    border-top: 4px solid #3498db; /* Blue */
+    border-top: 4px solid white; /* Blue */
     border-radius: 50%;
     width: 30px;
     height: 30px;
     animation: spin 2s linear infinite; /* Spin animation */
-    margin: 0 auto; /* Center horizontally */
+    margin: auto auto; /* Center horizontally */
 }
 
 @keyframes spin {
